--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^1.30.3",
+    "bootstrap": "^5.3.2",
     "next": "12.0.3",
     "react": "17.0.2",
     "react-dom": "17.0.2"
